--- a/index.html
+++ b/index.html
@@ -560,10 +560,10 @@
 
                             <article class="col-sm-4 isotopeItem webdesign">
                                 <div class="portfolio-item">
-                                    <img style="width:360px;height:360px;" src="images/hpmes/hpmes_1.png" alt="" />
+                                    <img style="width:360px;height:360px;" src="images/hpmes_1.png" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/hpmes/hpmes_1.png" class="fancybox">
+                                            <a href="images/hpmes_1.png" class="fancybox">
                                                 <h5>HPME++ IS - Login [Using Codeigniter]</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -573,10 +573,10 @@
 
                             <article class="col-sm-4 isotopeItem webdesign">
                                 <div class="portfolio-item">
-                                    <img style="width:360px;height:360px;" src="images/hpmes/hpmes_4.png" alt="" />
+                                    <img style="width:360px;height:360px;" src="images/hpmes_4.png" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/hpmes/hpmes_4.png" class="fancybox">
+                                            <a href="images/hpmes_4.png" class="fancybox">
                                                 <h5>HPME++ IS - Dashboard [Using Codeigniter]</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -587,10 +587,10 @@
 
                             <article class="col-sm-4 isotopeItem webdesign">
                                 <div class="portfolio-item">
-                                    <img style="width:360px;height:360px;" src="images/hpmes/hpmes_3.png" alt="" />
+                                    <img style="width:360px;height:360px;" src="images/hpmes_3.png" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/hpmes/hpmes_3.png" class="fancybox">
+                                            <a href="images/hpmes_3.png" class="fancybox">
                                                 <h5>HPME++ IS - Form [Using Codeigniter]</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -601,10 +601,10 @@
 
                             <article class="col-sm-4 isotopeItem webdesign">
                                 <div class="portfolio-item">
-                                    <img style="width:360px;height:360px;" src="images/hpmes/hpmesv2_1.png" alt="" />
+                                    <img style="width:360px;height:360px;" src="images/hpmesv2_1.png" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/hpmes/hpmesv2_1.png" class="fancybox">
+                                            <a href="images/hpmesv2_1.png" class="fancybox">
                                                 <h5>HPME++ IS v2 - Dashboard [Using Laravel/Vue.js]</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -615,10 +615,10 @@
 
                             <article class="col-sm-4 isotopeItem webdesign">
                                 <div class="portfolio-item">
-                                    <img style="width:360px;height:360px;" src="images/hpmes/hpmesv2_2.png" alt="" />
+                                    <img style="width:360px;height:360px;" src="images/hpmesv2_2.png" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/hpmes/hpmesv2_2.png" class="fancybox">
+                                            <a href="images/hpmesv2_2.png" class="fancybox">
                                                 <h5>HPME++ IS v2 - Form [Using Laravel/Vue.js]</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -629,10 +629,10 @@
 
                             <article class="col-sm-4 isotopeItem webdesign">
                                 <div class="portfolio-item">
-                                    <img style="width:360px;height:360px;" src="images/hpmes/hpmesv2_3.png" alt="" />
+                                    <img style="width:360px;height:360px;" src="images/hpmesv2_3.png" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/hpmes/hpmesv2_3.png" class="fancybox">
+                                            <a href="images/hpmesv2_3.png" class="fancybox">
                                                 <h5>HPME++ IS v2 - Profile [Using Laravel/Vue.js]</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
